--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,10 +4,11 @@
   <h1>Welcome to the Homepage!</h1>
 
   <% if current_user %>
+
     <p>Logged in as <%= current_user.email %></p>
     <%= link_to 'Logout', logout_path, method: :delete %>
   <% else %>
-    <%= link_to 'Login', new_session_path %>
+    <%= link_to 'Login', new_session_path, class: 'btn btn-primary' %>
     <%= link_to 'Sign up', new_user_path %>
   <% end %>
 
