--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,15 +9,23 @@
     <p> Please Create your Post Fom Here </p>  
     <%= link_to 'Create New Post ', new_post_path %><br><br>
     <%= link_to 'My Post ', my_post_path  %><br><br> 
-    <%= link_to 'Log out', logout_path, method: :delete %><br><br>
+    <%= button_to 'Log out', logout_path, method: :post %><br><br>
 
     
     <% @posts.each do |post| %>
     <hr><h4> TITLE: <b> <%= post.title %></b> </h4> 
     <h4> CONTENT: <b> <%= post.content %></b> </h4>
     <%= link_to 'New Comment', new_post_comment_path(post)%><br>
-    <b> Total Comments : </b> <%= post.comments.count %><hr> 
+    <b> Total Comments : </b> <%= post.comments.count %>
+    <% post.comments.each do |comment| %><br>
+    <%= comment.comment %>
     <% end %>
+    <hr>
+
+    <% end %>
+
+
+     
 
   <% else %>
     <%= link_to 'Log In', new_session_path, class: 'btn btn-primary' %><br><br>
